update with the possibility to force uwsgi master process kill

--- a/galaxyctl/onedatactl.ini
+++ b/galaxyctl/onedatactl.ini
@@ -3,8 +3,8 @@
 # IBIOM-CNR
 #
 # Contributors:
-# author: Tangaro Marco
-# email: ma.tangaro@ibbe.cnr.it
+# author: Tangaro Marco Antonio
+# email: ma.tangaro@ibiom.cnr.it
 
 [userdata]
 
