--- a/HEAT/build_system/galaxy-init.yaml
+++ b/HEAT/build_system/galaxy-init.yaml
@@ -4,7 +4,8 @@ description: setup server
 
 resources:
   vm_os:
-    type: galaxyinstance.yaml
+    #type: galaxyinstance.yaml
+    type: galaxyinstance_wVolume.yaml
     properties:
       key_name: mtangaro-key
       vm_name: galaxy_server
@@ -15,7 +16,11 @@ resources:
       instance_type: medium #4cpu-4GB-20dsk
       availability_zone: nova
       net_id: fe82ef7b-4bb7-4c1e-b4ec-ec5c1b0c7333 #pub-ip
+      #---
+      volume_size: 20
+      volume_mountpoint: /export
+      #---
       action: 'RUN'
-      #flavor: 'galaxy-no-tools' # base_image and run_tools_script are also possible values
-      flavor: 'galaxy'
+      # base_image and run_tools_script are also possible values
+      flavor: 'galaxy-testing'
       tools_recipe_url: 'https://raw.githubusercontent.com/mtangaro/GalaxyCloud/master/HEAT/build_system/tools.yml'
