--- a/tosca_templates/galaxy_elastic_cluster_full_elixirIT.yaml
+++ b/tosca_templates/galaxy_elastic_cluster_full_elixirIT.yaml
@@ -13,7 +13,7 @@ topology_template:
     wn_num_max:
       type: integer
       description: Maximum number of WNs in the elastic cluster
-      default: 5
+      default: 2
       required: yes
     wn_num_min:
       type: integer
@@ -31,7 +31,7 @@ topology_template:
     storage_size:
       type: string
       description: storage memory required for the instance
-      default: 10 GB
+      default: 50 GB
     hybrid:
       type: boolean
       description: Flag to specify that this cluster will work in an hybrid environment
@@ -66,11 +66,11 @@ topology_template:
     version:
       type: string
       description: galaxy version to install
-      default: master
+      default: release_17.09
     instance_description:
       type: string
       description: galaxy instance description
-      default: INDIGO Galaxy test
+      default: Elastic SLURM cluster
     instance_key_pub:
       type: string
       description: galaxy instance ssh public key
@@ -216,9 +216,7 @@ topology_template:
             instance_type: { get_input: fe_instance_flavor }
         os:
           properties:
-            #image: centos-7-1708-galaxy-slurm
             image: centos-7-1708-galaxy-base
-            #image: centos-7-1708-vmi
             #image: ubuntu-16.04-vmi
       requirements:
         # contextually this can only be a relationship type
@@ -279,10 +277,10 @@ topology_template:
             instance_type: { get_input: wn_instance_flavor }
         os:
           properties:
-            #image: centos-7-1708-galaxy-slurm
             image: centos-7-1708-galaxy-base
-            #image: centos-7-1708-vmi
             #image: ubuntu-16.04-vmi
+      requirements:
+        - dependency: galaxy_portal # this is needed to correctly share /export after its configuration on WNs
 
   outputs:
     galaxy_url:
