--- a/LUKS/play.yaml
+++ b/LUKS/play.yaml
@@ -29,7 +29,7 @@
         regexp: '{{ item.regexp }}'
         line: '{{ item.line }}'
       with_items:
-        - { regexp: 'LOGFILE="/var/log/galaxy/luks$now.log"', line: 'LOGFILE="/tmp/luks$now.log"' }
+        - { regexp: 'LOGFILE="/var/log/galaxy/luks\$now.log"', line: 'LOGFILE="/tmp/luks$now.log"' }
         - { regexp: 'SUCCESS_FILE="/var/run/fast-luks.success"', line: 'SUCCESS_FILE="/tmp/fast-luks.success"' }
         - { regexp: "luks_cryptdev_file='/etc/galaxy/luks-cryptdev.ini'", line: "luks_cryptdev_file='/tmp/luks-cryptdev.ini'" }
 
