--- a/LUKS/play.yaml
+++ b/LUKS/play.yaml
@@ -11,8 +11,10 @@
     device: '/dev/vdb'        # set device [default: /dev/vdb]
     mountpoint: '/export'     # set mount point [default: /export]
     filesystem: 'ext4'        # filesystem [default: ext4] 
+    paranoic_mode: false       # enable paranoic mode [default false]
 
-    user_passphrase: Not_a_valid_password # A passphrase with at least 8 char long alphanumeric string
+
+    user_passphrase: Not_a_valid_passphrase # A passphrase with at least 8 char long alphanumeric string
 
   pre_tasks:
     - name: get script
@@ -25,3 +27,15 @@
       shell: 'printf "{{ user_passphrase }}\n{{ user_passphrase }}\n" | ./fast_luks.sh --paranoic-mode -c {{ cipher }} -k {{ keysize }} -a {{ hash_algorithm }} -d {{ device }} -m {{ mountpoint }} -f {{ filesystem }} --foreground --non-interactive'
       args:
         chdir: '{{ script_path }}'
+
+    - name: Install pv to wipe data
+      apt:
+        name: pv
+        state: present
+      when: paranoic_mode|bool
+
+    - name: Encrypt volume
+      shell: 'printf "{{ user_passphrase }}\n{{ user_passphrase }}\n" | ./fast_luks.sh --paranoic-mode -c {{ cipher }} -k {{ keysize }} -a {{ hash_algorithm }} -d {{ device }} -m {{ mountpoint }} -f {{ filesystem }} --foreground --non-interactive'
+      args:
+        chdir: '{{ script_path }}'
+      when: paranoic_mode|bool
