--- a/IM_templates/galaxy_elastic_cluster_elixirIT.yaml
+++ b/IM_templates/galaxy_elastic_cluster_elixirIT.yaml
@@ -1,39 +1,53 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
 
 description: >
-  TOSCA test for launching a Galaxy Server also configuring the bowtie2
-  tool using Galaxy Tool Shed.
+  TOSCA test for launching a Virtual Elastic Cluster. It will launch
+  a single front-end that will be in change of managing the elasticity
+  using the specified LRMS (torque, sge, slurm and condor) workload.
 
 topology_template:
   inputs:
-    number_cpus:
+    wn_num_max:
       type: integer
-      description: number of cpus required for the instance
+      description: Maximum number of WNs in the elastic cluster
       default: 2
-    memory_size:
+      required: yes
+    wn_num_min:
+      type: integer
+      description: Minumum number of WNs in the elastic cluster
+      default: 1
+      required: yes
+    fe_instance_flavor:
       type: string
-      description: ram memory required for the instance
-      default: 4 GB
+      description: instance flavor (num_cpu, memory, disk)
+      default: medium
+      required: yes
+    wn_instance_flavor:
+      type: string
+      description: instance flavor (num_cpu, memory, disk)
+      default: small
+      required: yes
     storage_size:
       type: string
       description: storage memory required for the instance
-      default: 50 GB 
+      default: 50 GB
+    hybrid:
+      type: boolean
+      description: Flag to specify that this cluster will work in an hybrid environment
+      default: false
+      required: false
 
     admin_email:
       type: string
       description: email of the admin user
-      default: ma.tangaro@gmail.com
+      default: admin@admin.com
     admin_api_key:
       type: string
       description: key to access the API with admin role
       default: not_very_secret_api_key
-    user:
-      type: string
-      description: username to launch the galaxy daemon
-      default: galaxy
     version:
       type: string
       description: galaxy version to install
@@ -41,7 +55,7 @@ topology_template:
     instance_description:
       type: string
       description: galaxy instance description
-      default: "INDIGO Galaxy test"
+      default: INDIGO Galaxy test
     instance_key_pub:
       type: string
       description: galaxy instance ssh public key
@@ -51,27 +65,10 @@ topology_template:
       description: path to store galaxy data
       default: /export
 
-    galaxy_storage_type:
-      type: string
-      description: Storage type (Iaas Block Storage, Onedata, Filesystem encryption)
-      default: "IaaS"
-    userdata_provider:
-      type: string
-      description: default OneProvider
-      default: "not_a_privder_url"
-    userdata_token:
-      type: string
-      description: Access token for onedata space
-      default: "not_a_token"
-    userdata_space:
-      type: string
-      description: Onedata space
-      default: "galaxy"
-
     flavor:
       type: string
       description: Galaxy flavor for tools installation
-      default: "galaxy-rna-workbench"
+      default: "galaxy-testing"
 
     reference_data:
       type: boolean
@@ -118,25 +115,41 @@ topology_template:
       description: CernVM-FS proxy port
       default: 80
 
- 
+
   node_templates:
 
-    galaxy:
-      type: tosca.nodes.indigo.GalaxyPortalFastConfig
+    elastic_cluster_front_end:
+      type: tosca.nodes.indigo.ElasticCluster
       properties:
-        os_storage: { get_input: galaxy_storage_type }
-        token: { get_input: userdata_token }
-        provider: { get_input: userdata_provider }
-        space: { get_input: userdata_space }
+        deployment_id: orchestrator_deployment_id
+        iam_access_token: iam_access_token
+        iam_clues_client_id: iam_clues_client_id
+        iam_clues_client_secret: iam_clues_client_secret
+        hybrid: { get_input: hybrid }
+      requirements:
+        - lrms: lrms_front_end
+        - wn: wn_node
+
+    galaxy_portal:
+      type: tosca.nodes.indigo.GalaxyPortal
+      properties:
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
         version: { get_input: version }
         instance_description: { get_input: instance_description }
         instance_key_pub: { get_input: instance_key_pub }
         export_dir: { get_input: export_dir }
-        flavor: { get_input: flavor }
       requirements:
-        - lrms: local_lrms
+        - lrms: lrms_front_end
+
+    galaxy_tools:
+      type: tosca.nodes.indigo.GalaxyShedTool
+      properties:
+        flavor: { get_input: flavor }
+        admin_api_key: { get_input: admin_api_key }
+        version: { get_input: version }
+      requirements:
+        - host: galaxy_portal
 
     galaxy_refdata:
       type: tosca.nodes.indigo.GalaxyReferenceData
@@ -154,19 +167,23 @@ topology_template:
         refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
         refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
       requirements:
-        - host: galaxy
+        - host: galaxy_portal
+        - dependency: galaxy_tools
 
-    # type to describe a Galaxy not using any LRMS but using the local system
-    local_lrms:
-      type: tosca.nodes.indigo.LRMS.FrontEnd.Local
+    lrms_front_end:
+      type: tosca.nodes.indigo.LRMS.FrontEnd.Slurm
+      properties:
+        wn_ips: { get_attribute: [ lrms_wn, private_address ] }
+        hybrid: { get_input: hybrid }
       requirements:
-        - host: galaxy_server
- 
-    galaxy_server:
+        - host: lrms_server
+
+    lrms_server:
       type: tosca.nodes.indigo.Compute
       capabilities:
         endpoint:
           properties:
+            dns_name: slurmserver
             network_name: PUBLIC
             private_ip: false
             ports:
@@ -176,18 +193,12 @@ topology_template:
               ftp_port:
                 protocol: tcp
                 source: 21
-        # Host container properties
         host:
-         properties:
-           num_cpus: { get_input: number_cpus }
-           mem_size: { get_input: memory_size }
-           disk_size: 20 GB
-        # Guest Operating System properties
+          properties:
+            instance_type: { get_input: fe_instance_flavor }
         os:
           properties:
-            #image: ost://cloud.recas.ba.infn.it/d556695b-49a9-4773-8d14-b64800c122df # CentOS 7 1708 Galaxy
-            image: ost://cloud.recas.ba.infn.it/f9156e4c-628c-4e84-a982-591cdb0edf08 # CentOS 7 1708 Galaxy New
-            #image: ost://cloud.recas.ba.infn.it/08836ab9-b2e1-47c4-8384-82252fede8ef # CentOS 7 1708 galaxy-rna-workbench
+            image: ost://cloud.recas.ba.infn.it/0c4c232d-d90d-43da-b53a-ccbe8a6edc46 # CentOS 7 1708 Base
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -205,6 +216,54 @@ topology_template:
       properties:
         size: { get_input: storage_size }
 
+    wn_node:
+      type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
+      properties:
+        front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
+        public_front_end_ip: { get_attribute: [ lrms_server, public_address, 0 ] }
+        hybrid: { get_input: hybrid }
+      capabilities:
+        wn:
+          properties:
+            max_instances: { get_input: wn_num_max }
+            min_instances: { get_input: wn_num_min }
+      requirements:
+        - host: lrms_wn
+
+    galaxy_wn:
+      type: tosca.nodes.indigo.GalaxyWnCvmfsReferenceData
+      properties:
+        export_dir: { get_input: export_dir }
+        front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
+        flavor: { get_input: flavor }
+        version: { get_input: version }
+        reference_data: { get_input: reference_data }
+        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
+        refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
+        refdata_cvmfs_key_file: { get_input: refdata_cvmfs_key_file }
+        refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
+        refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
+        refdata_dir: { get_input: refdata_dir }
+      requirements:
+        - host: lrms_wn
+
+    lrms_wn:
+      type: tosca.nodes.indigo.Compute
+      capabilities:
+        scalable:
+          properties:
+            count: { get_input: wn_num_min }
+        host:
+          properties:
+            instance_type: { get_input: wn_instance_flavor }
+        os:
+          properties:
+            image: ost://cloud.recas.ba.infn.it/0c4c232d-d90d-43da-b53a-ccbe8a6edc46 # CentOS 7 1708 Base
+
   outputs:
     galaxy_url:
-      value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ], '/galaxy' ] }
+      value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], '/galaxy' ] }
+    cluster_ip:
+      value: { get_attribute: [ lrms_server, public_address, 0 ] }
+    cluster_creds:
+      value: { get_attribute: [ lrms_server, endpoint, credential, 0 ] }
